...
"After 30 days" = "After 30 days";

/* No comment provided by engineer. */
"After 30 Days" = "After 30 Days";

/* Show all the spaces */
"All Spaces" = "All Spaces";

/* No comment provided by engineer. */
"Already have an account? Sign in" = "Already have an account? Sign in";

/* No comment provided by engineer. */
"Analytics Cookies" = "Analytics Cookies";
...
"Close All" = "Close All";

/* No comment provided by engineer. */
"Close All %@Tabs" = "Close All %@Tabs";

/* No comment provided by engineer. */
"Close All Tabs" = "Close All Tabs";

/* No comment provided by engineer. */
"Close Card Strip Tab %@" = "Close Card Strip Tab %@";

/* No comment provided by engineer. */
"Close Incognito Tabs" = "Close Incognito Tabs";

/* No comment provided by engineer. */
"Close Reading Mode" = "Close Reading Mode";

/* No comment provided by engineer. */
"Close Tab" = "Close Tab";

/* No comment provided by engineer. */
"Closed" = "Closed";

/* No comment provided by engineer. */
"Collapse" = "Collapse";
...
"Dismiss pop-up window" = "Dismiss pop-up window";

/* No comment provided by engineer. */
"Dismiss tour" = "Dismiss tour";

/* No comment provided by engineer. */
"Done" = "Done";

/* No comment provided by engineer. */
"Download" = "Download";

/* No comment provided by engineer. */
"Download (%@)" = "Download (%@)";
...
"If you have any questions or need assistance with your Premium membership, please reach out to premium@neeva.co." = "If you have any questions or need assistance with your Premium membership, please reach out to premium@neeva.co.";

/* No comment provided by engineer. */
"If you have any questions or need assistance with your Unlimited membership, please reach out to premium@neeva.co." = "If you have any questions or need assistance with your Unlimited membership, please reach out to premium@neeva.co.";

/* No comment provided by engineer. */
"Incognito Tabs" = "Incognito Tabs";

/* No comment provided by engineer. */
"Ingredients" = "Ingredients";

/* No comment provided by engineer. */
"Instructions" = "Instructions";
...
"Key" = "Key";

/* No comment provided by engineer. */
"Kill the clutter" = "Kill the clutter";

/* Sort by last updated space */
"Last Updated" = "Last Updated";

/* No comment provided by engineer. */
"Learn More" = "Learn More";

/* No comment provided by engineer. */
"Learn More About Spaces" = "Learn More About Spaces";

/* No comment provided by engineer. */
"Learn More on the Neeva Website" = "Learn More on the Neeva Website";

/* No comment provided by engineer. */
"Leave Incognito Mode" = "Leave Incognito Mode";
...
"More" = "More";

/* No comment provided by engineer. */
"More Comments" = "More Comments";

/* Sort by Space name */
"Name" = "Name";

/* No comment provided by engineer. */
"Need help or want instant answers to FAQs?" = "Need help or want instant answers to FAQs?";

/* No comment provided by engineer. */
"Needs work" = "Needs work";
...
"Other search engines" = "Other search engines";

/* No comment provided by engineer. */
"Other Sign-up Options" = "Other sign-up options";

/* Show spaces owned by the user */
"Owned by me" = "Owned by me";

/* No comment provided by engineer. */
"Page is in a Space" = "Page is in a Space";

/* No comment provided by engineer. */
"Page Loading" = "Page Loading";
...
"Personalization and social media features from third party providers" = "Personalisation and social media features from third party providers";

/* No comment provided by engineer. */
"Phone" = "Phone";

/* No comment provided by engineer. */
"Pin" = "Pin";

/* No comment provided by engineer. */
"Pin Tab" = "Pin Tab";

/* No comment provided by engineer. */
"Pin/unpin not yet implemented" = "Pin/unpin not yet implemented";

/* No comment provided by engineer. */
"Pinned To Top Sites" = "Pinned To Top Sites";
...
"Require Confirmation" = "Require Confirmation";

/* No comment provided by engineer. */
"Reset" = "Reset";

/* No comment provided by engineer. */
"restore" = "restore";

/* No comment provided by engineer. */
"Restore Tab Group" = "Restore Tab Group";

/* No comment provided by engineer. */
"S" = "S";
...
"Sepia Theme" = "Sepia Theme";

/* No comment provided by engineer. */
"Set as Default Browser" = "Set as Default Browser";

/* No comment provided by engineer. */
"Settings" = "Settings";

/* No comment provided by engineer. */
"Share" = "Share";

/* No comment provided by engineer. */
"Share Space" = "Share Space";
...
"Show Recent Pages" = "Show Recent Pages";

/* No comment provided by engineer. */
"Show Search Suggestions" = "Show Search Suggestions";

/* No comment provided by engineer. */
"Show Tabs" = "Show Tabs";

/* No comment provided by engineer. */
"Show Tour" = "Show Tour";

/* Shows a section */
"shows" = "shows";
...
"Sort" = "Sort";

/* No comment provided by engineer. */
"Space Item" = "Space Item";

/* No comment provided by engineer. */
"Spaces" = "Spaces";

/* No comment provided by engineer. */
"Spread the cheer on the App Store? Your review will help Neeva grow." = "Spread the cheer on the App Store? Your review will help Neeva grow.";

/* (No Comment) */
"Standard" = "Standard";
...
"Unlimited ad-free, private search" = "Unlimited ad-free, private search";

/* Bullet point text to describe Neeva device limits */
"Unlimited devices" = "Unlimited devices";

/* No comment provided by engineer. */
"Unpin" = "Unpin";

/* No comment provided by engineer. */
"Unpin Tab" = "Unpin Tab";

/* No comment provided by engineer. */
"Update" = "Update";

/* No comment provided by engineer. */
"Update Space" = "Update Space";
...
