...

        var body: some View {
            TabToolbarButton(
                label: Symbol(
                    .lineHorizontal3DecreaseCircle,
                    size: 20, weight: weight,
                    label: "Space Filter"),
                action: action
            )
        }
    }

    struct OverflowMenu: View {
...
            TabToolbarButton(
                label: Symbol(
                    model.urlInSpace ? .bookmarkFill : .bookmark,
                    size: 20,
                    weight: weight,
                    relativeTo: nil,
                    label: "Add To Space"
                ),
                action: action
            )
            .accessibilityValue(model.urlInSpace ? "Page is in a Space" : "")
            .disabled(incognitoModel.isIncognito || !model.isPage || model.isErrorPage)
        }
...
