...
                .lineLimit(1)
                .accessibilityHint(
                    [space.isPublic ? "Public" : nil, space.isShared ? "Shared" : nil]
                        .compactMap { $0 }
                        .joined(separator: ", ")
                )
                .accessibilityIdentifier("spaceListItemName")
            if !space.isPublic {
                Symbol(decorative: .lock, style: .labelMedium)
                    .foregroundColor(.secondaryLabel)
            }
            Spacer(minLength: 0)
            Symbol(decorative: icon, weight: .semibold, relativeTo: .title3)
...
