...
            let toastViewManager = bvc.toastViewManager
            toast = toastViewManager.makeToast(content: toastContent)
        }
    }

    func showToastForPinningTab(pinning: Bool, tabManager: TabManager) {
        let toastText = pinning ? "Tab Pinned" : "Tab Unpinned"

        let toastViewManager = SceneDelegate.getBVC(with: tabManager.scene).toastViewManager
        showToast(with: toastText, toastViewManager: toastViewManager, checkmark: true)
    }

    func showToastForDownload(download: Download, toastViewManager: ToastViewManager) {
...
